--- a/app/src/main/res/layout/item_job.xml
+++ b/app/src/main/res/layout/item_job.xml
@@ -9,6 +9,19 @@
     android:background="#AA8"
     android:padding="28dp">
 
+    <Button
+        android:id="@+id/buttonView"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="View"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.167"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/compDead" />
+
     <TextView
         android:id="@+id/compTitle"
         android:layout_width="wrap_content"
@@ -75,13 +88,15 @@
         app:layout_constraintTop_toBottomOf="@+id/compName" />
 
     <Button
-        android:id="@+id/buttonView"
+        android:id="@+id/buttonView2"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View"
+        android:layout_marginTop="12dp"
+        android:text="Save"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.793"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/compDead" />
 
