--- a/app/src/main/res/layout/activity_company_dashboard.xml
+++ b/app/src/main/res/layout/activity_company_dashboard.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".Activities.company_dashboard">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/AppliedList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
