--- a/app/src/main/res/layout/activity_company_login.xml
+++ b/app/src/main/res/layout/activity_company_login.xml
@@ -44,7 +44,7 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:hint="Password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
