--- a/app/src/main/res/layout/item_appliedjob.xml
+++ b/app/src/main/res/layout/item_appliedjob.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:background="#AA8"
+    android:background="@drawable/item"
     android:padding="28dp">
 
     <TextView
@@ -17,6 +17,7 @@
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="Job title"
+        android:textStyle="bold"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
@@ -32,7 +33,7 @@
         android:text="Accept"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.313"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/applierName" />
 
@@ -45,7 +46,7 @@
         android:text="Reject"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.46"
+        app:layout_constraintHorizontal_bias="0.741"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/applierName" />
 
@@ -54,12 +55,11 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:gravity="left"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
         android:text="CV"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/applierName" />
 
@@ -71,6 +71,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:text="Name"
+        android:gravity="center"
+        android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
