--- a/app/src/main/res/layout/activity_company_login.xml
+++ b/app/src/main/res/layout/activity_company_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".Activities.CompanyLogin">
 
     <TextView
@@ -15,11 +16,12 @@
         android:gravity="center"
         android:text="Login"
         android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.863" />
 
     <EditText
         android:id="@+id/compID"
@@ -30,6 +32,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="CID"
+        android:textStyle="bold"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.509"
@@ -46,6 +49,7 @@
         android:ems="10"
         android:inputType="textPassword"
         android:hint="Password"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,6 +63,7 @@
         android:layout_marginTop="52dp"
         android:layout_marginEnd="8dp"
         android:text="Login"
+        android:background="#70ad66"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/compPass" />
