--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -4,35 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".Activities.user_profile">
 
     <ImageView
         android:id="@+id/logout"
         android:layout_width="53dp"
         android:layout_height="47dp"
-        android:layout_marginTop="56dp"
-        android:background="@color/colorAccent"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.951"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_signout" />
 
     <TextView
         android:id="@+id/uploadCV"
-        android:layout_width="137dp"
-        android:layout_height="49dp"
+        android:layout_width="148dp"
+        android:layout_height="119dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="upload cv"
+        android:background="@drawable/bg_background"
         android:gravity="center"
+        android:text="upload cv"
         android:textSize="20sp"
-        android:background="@color/colorPrimary"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logout" />
+        app:layout_constraintTop_toBottomOf="@+id/logout"
+        app:layout_constraintVertical_bias="0.795" />
 
 </android.support.constraint.ConstraintLayout>
