--- a/app/src/main/res/layout/activity_user_signup.xml
+++ b/app/src/main/res/layout/activity_user_signup.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".Activities.user_signup">
 
     <EditText
@@ -15,6 +16,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="Email"
+        android:textStyle="bold"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.537"
@@ -30,6 +32,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="Username"
+        android:textStyle="bold"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +47,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="Confirm Password"
+        android:textStyle="bold"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.537"
@@ -57,6 +61,7 @@
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="Signup"
+        android:textStyle="bold"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,6 +76,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="Name"
+        android:textStyle="bold"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.509"
@@ -86,6 +92,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="Password"
+        android:textStyle="bold"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.537"
@@ -100,6 +107,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:text="Signup"
+        android:background="#70ad66"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signConfPass" />
