--- a/app/src/main/res/layout/item_interview.xml
+++ b/app/src/main/res/layout/item_interview.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:background="#Ab8"
+    android:background="@drawable/item"
     android:padding="28dp">
 
     <TextView
@@ -18,6 +18,7 @@
         android:gravity="center"
         android:text="Hi! You have been selected for this_job at this_company!!\nYour interview is on date"
         android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
