--- a/app/src/main/res/menu/activity_job_banner_drawer.xml
+++ b/app/src/main/res/menu/activity_job_banner_drawer.xml
@@ -5,34 +5,34 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_archtect"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Engineer/Architects" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_tele"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="IT &amp; Telecommunicaton" />
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_bank"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="Bank/Non-Bank Fin.Institution" />
+        <item
+            android:id="@+id/nav_research"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="Research/Consultancy" />
+
+        <item
+            android:id="@+id/nav_data"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="Data Entry/Operator" />
+
+        <item
+            android:id="@+id/nav_design"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="Design/Creative" />
+
+
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
 
 </menu>
